# France-GPT

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_TROUBLESHOOTING.md  Dockerfile  LICENSE  QWEN.md  README.md  config.env  docker-compose.yml  env.example  localstack-script.sh  main.py  openapi.json  pyproject.toml  repomix-output.xml  specs_datainclusion_tools.md
.chainlit/: config.toml
.claude/: settings.local.json
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
public/elements/: WebsiteViewer.jsx
src/: __init__.py  config.py  gradio_app.py  gradio_theme.py  gradio_utils.py  main.py  middleware.py  utils.py
src/agent/: __init__.py  agent.py  config.py  history.py  server.py  ui_tools.py
src/api/: __init__.py  dependencies.py  router.py
src/app/: __init__.py  factory.py
src/core/: __init__.py  config.py  lifespan.py  logging.py  profiles.py  s3_client.py
src/db/: __init__.py  models.py  session.py
src/mcp/: config.py  server.py
src/mcp_server/: __init__.py  auth.py  factory.py  logging_config.py  middleware.py  openapi_loader.py  server.py  tool_mapping.py  tool_transformer.py  utils.py
src/mcp_server/services/datainclusion/: mappings.json  openapi.json  schemas.py  service.py
src/mcp_server/services/insee/: __init__.py  openapi.json  service.py
src/mcp_server/services/labonnealternance/: schemas.py  service.py
src/mcp_server/services/legifrance/: mappings.json  openapi.json  service.py  tool_definitions.py
src/ui/: __init__.py  agent_setup.py  agent_streaming.py  chat.py  components.py  data_layer.py  db_init.py  formatters.py  streaming.py  utils.py
tests/: conftest.py  test_app.py
tests/agent/: test_agent.py
tests/app/: test_factory.py
tests/core/: test_config.py  test_lifespan.py  test_s3_client.py
tests/mcp_server/: __init__.py  test_auth.py  test_factory.py  test_openapi_loader.py  test_tool_transformer.py
tests/ui/: test_agent_setup.py  test_chat.py  test_streaming.py
(+17 files in other folders)
