[project]
name = "France-GPT"
version = "0.1.0"
description = "Ce projet est une collection d'Agents spécialisé grâce aux API's data.gouv transformé en outils MCP (Légifrance, Data.Inclusion, INSEE ...)"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Andrew ASSEF", email = "assef.andrew@gmail.com" },
]
dependencies = [
    "fastmcp",
    "httpx",
    "python-dotenv",
    "pydantic-ai-slim[mcp,openai,cli,logfire]",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "chainlit",
    "asyncpg",
    "SQLAlchemy",
    "greenlet",
    "aiohttp",
    "boto3",
    "pylegifrance"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pylint"
]

[project.urls]
Homepage = "https://github.com/votre-user/datainclusion-mcp-server"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"