[project]
name = "France-GPT"
version = "0.1.0"
description = "Ce projet est une collection d'Agents spécialisé grâce aux API's data.gouv transformé en outils MCP (Légifrance, Data.Inclusion, INSEE ...)"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Andrew ASSEF", email = "assef.andrew@gmail.com" },
]
dependencies = [
    "fastmcp",
    "httpx>=0.28.1",
    "python-dotenv",
    "pydantic-ai-slim[mcp,openai,cli,logfire]",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "chainlit==2.6.9",
    "asyncpg",
    "SQLAlchemy",
    "greenlet",
    "aiohttp",
    "boto3",
    "aioboto3",
    "pylegifrance",
    "PyPDF2"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pre-commit",
    "pytest-httpx",
    "pytest-mock",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/votre-user/datainclusion-mcp-server"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"